# CaseGenerator

./: Main.hs  case-generator.cabal  stack.yaml
AntiguaUUT/: UUT.hs
Ideas/: Main.hs
Main code/: Main.hs
UUT Ricardo/: Arrays.hs  Assertion.hs  UUT.hs
UUTs/: UUT-BST-insert.hs  UUT-BST-search.hs  UUTInsert1.hs  UUTInsert2.hs
app/: Main.hs
src/: Arbitrary.hs  Arrays.hs  Assertion.hs  Bags.hs  Compose.hs  Prove.hs  Sequences.hs  Sets.hs  Sized.hs  TemplateAllv.hs  TemplateArbitrary.hs  TemplateSized.hs  UUT.hs  UUTReader.hs  UUTReaderUtilities.hs  UUTReaderUtilitiesDeep.hs  UUTReaderUtilitiesDeeper.hs
