name:                case-generator
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/pegartillo95/CaseGenerator
license:             BSD3
license-file:        LICENSE
author:              Pedro García Castillo
maintainer:          example@example.com
copyright:           2017 Pedro García Castillo
category:            CAVI-ART
build-type:          Simple
--extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                       , pqueue >= 1.3.1
  default-language:    Haskell2010

executable case-generator-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , case-generator
  default-language:    Haskell2010

test-suite case-generator-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , case-generator
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/pegartillo95/CaseGenerator
